# raspberry-video-surveillance

./: README.md
conf/: bblayers.conf  build.conf  local.conf
docker/: Dockerfile
libs/app-utils/: Cargo.toml  app-utils_0.1.0.bb
libs/app-utils/src/: lib.rs
libs/app-utils/tests/: test_utils.rs
meta-video-surveillance/classes/: app-utils-deps.bbclass
meta-video-surveillance/conf/: layer.conf
meta-video-surveillance/recipes-apps/web-server/: web-server.bb
meta-video-surveillance/recipes-core/dropbear-config/: dropbear-config.bb
meta-video-surveillance/recipes-core/dropbear-config/files/: dropbear
meta-video-surveillance/recipes-core/usb/: usb-automount.bb
meta-video-surveillance/recipes-core/usb/files/: 99-usb-automount.rules  usb-automount.sh
meta-video-surveillance/recipes-multimedia/v4l-utils/: v4l-utils_%.bbappend
meta-video-surveillance/recipes-networking/wifi-connect/: wifi-connect.bb
scripts/: build-and-decompress.sh  decompress-image.sh  generate-bitbake-conf.sh  post-source-actions.sh  run-tests.sh  run-yocto-docker.sh  setup-external-layers.sh
services/network/: Cargo.toml
services/network/src/: main.rs
services/network/tests/: test_networking.rs
tools/wifi-connect/: Cargo.toml
tools/wifi-connect/src/: lib.rs  main.rs
tools/wifi-connect/tests/: test_wifi_connect.rs
web-server/: Cargo.toml
web-server/html/: index.html  script.js  styles.css
web-server/src/: main.rs
