[package]
description = "A simple web server for Raspberry Pi for configuring stuff"
name = "web-server"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/vilmursss/raspberry-video-surveillance.git"
repository = "https://github.com/vilmursss/raspberry-video-surveillance.git"

[dependencies]
tiny_http = "0.12"
app-utils = { path = "../libs/app-utils" }
os_pipe = "1.2.2"