[package]
name = "app-utils"
version = "0.1.0"
edition = "2021"
description = "Common utility functions for Rust applications"
homepage = "https://github.com/vilmursss/raspberry-video-surveillance.git"
repository = "https://github.com/vilmursss/raspberry-video-surveillance.git"

[lib]
name = "app_utils"
path = "src/lib.rs"

[dependencies]
get_if_addrs = "0.5.3"

[dev-dependencies]
tempfile = "3.20.0"