[package]
description = "A tool to connect to WiFi networks"
name = "wifi-connect"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/vilmursss/raspberry-video-surveillance.git"
repository = "https://github.com/vilmursss/raspberry-video-surveillance.git"

[lib]
name = "wifi_connect"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
tempfile = "3.20.0"

[[bin]]
name = "wifi-connect"
path = "src/main.rs"
